Fix channel edit on mobile

--- a/app/styles/components/_channel.scss
+++ b/app/styles/components/_channel.scss
@@ -30,6 +30,7 @@
 	position: absolute;
 	top: 0;
 	right: 1rem;
+	z-index: 4; // above media
 }
 
 // .Channel-titleSection
